boreal/tests/assets/invalid_files/compilation/expression_incompatible_types4.yar
// [error: expressions have invalid types]
rule a {
    condition:
        1 \ "b" == 3
}
